fixed alignment in dev section

--- a/css/styles.css
+++ b/css/styles.css
@@ -618,8 +618,7 @@ h4{
 	align-items: center;
 	z-index: 100;
 	position: relative;
-	min-width: 300px;
-	max-width: 400px;
+	width: 350px;
 	height: auto;
 	margin: 20px 40px;
 	-webkit-flex-direction: row;
@@ -694,13 +693,12 @@ h4{
 			z-index: 8;
 			display: block;
 			position: relative;
-			width: 100%;
 			height: auto;
 			padding-top: 2em;
 			background-color: #1976D2;
 			margin-right: auto;
 			margin-left: auto;
-			max-width: 280px;
+			width: 250px;
 		}
 		.dev-section:before{
 			content: '';
